styles/styles.css
/* Load custom Roboto font */
/* @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

/* Override CSS defaults custom values */
* {
    font-family: 'Poppins', sans-serif;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* Establish some basic properties for the overall website */
/* This code helps ensure that the footer always sticks to the bottom of the page */
body{
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

/* Define font size and color for lists, html links and buttons */
li, a, button {
    font-weight: 500;
    font-size: 16px;
    text-decoration: none;
    color:black;
}


/* Define values for heading tags */
h1, h2, h3 {
    color:#72A6E8;
}


/* Allows images to scale with the browser window */
img {
	max-width: 100%;
	height: auto;
}



/* Flexbox container for the site header*/
header {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 15px 5%;   /* 15px padding on top and bottom. 5% padding on sides. Note: these numbers were chosen arbitrarily */
}

/* You can change how the mouse cursor behaves when you hover over the logo. */
.flexbox-navbar-logo {
    cursor:pointer;
    margin-right: auto;
    transition: all 0.5s ease 0s;
}
.flexbox-navbar-logo:hover {
    transform: scale(1.1);
}

.flexbox-navbar-hamburger {
    cursor:pointer;
    transition: all 0.5s ease 0s;
}
.flexbox-navbar-hamburger:hover {
    transform: scale(1.1);
}

/* Header navbar button properties */
.flexbox-navbar-button {
    margin-left: 20px;
    padding: 12px 32px;
    background-color: #7D92DB;
    color: white;
    font-size: 20px;
    font-weight: bold;
    border: none;
    border-radius: 50px;
    cursor:pointer;
    transition: all 0.5s ease 0s;
}
/*  Hover effect for navbar button */
.flexbox-navbar-button:hover {
    background-color: #72A6E8;
    transform: scale(1.1);
    /*font-size: 22px;*/
}

.flexbox-navbar-text {
    list-style: none;   /* Removes bullet points that appear before list elements on the navbar */
}

.flexbox-navbar-text li {
    display: inline-block;  /* Inline block makes it so that list elements appear horizontally */
    padding: 0px 20px;
}

/* Target hyperlinks within the navbar */
.flexbox-navbar-text li a{
    transition: all 0.3s ease 0s;
}
.flexbox-navbar-text li a:hover{
    color:#72A6E8;
    font-size: 17px;
}


/* flexbox-main-content is the stuff in-between the header and the footer*/
.flexbox-main-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: left;
    flex-direction: column;
    padding: 10px 15%;   /* First value: padding top and bottom. Second value: padding on sides. */
    margin-right: auto;
}

/* Container that stores the YouTube video */
.video-container {
    position: relative;
    overflow:hidden;
    /* The value below will display the video in 16:9 format */
    padding-bottom: 56.25%;
    height: 0;
}

.video-container iframe, .video-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    max-width: 100%;
}

/* Here we can set the maximum size of the video and the alignment. */
.video-wrapper {
    width: 100%;
    max-width: 1280px;
    align-self: center;
}

footer {
    background-color: #72A6E8;
    font-weight: bold;
    color:white;
    margin-top:auto;    /* Force footer to stick to bottom of page */
}

.flexbox-footer-container {
    display: flex;
    flex: 1;
    justify-content: flex-start;
    flex-direction: column;
    align-items: left;
    padding: 15px 6%;
}

.flexbox-footer-row {
    flex-wrap: wrap;    /* When viewport gets smaller each item will wrap onto a new line */
    list-style: none;
    margin-bottom: 32px;
}
.flexbox-footer-row li {
    margin-bottom: 2px;
    font-weight: bold;
    color:white;
}

/* Centers a photo */
.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 40%;
}

.hamburger {
    width: 35px;
    height: 5px;
    background-color: black;
    margin: 6px 15px;
  }

